# lite-rt-mobilenetv2-study

./: .gitignore  README.md  main.py  pyproject.toml
models/: mobilenet_v2_c3_a.tflite  mobilenet_v2_c3_b.tflite  mobilenet_v2_c3_c.tflite  mobilenet_v2_c3_d.tflite  mobilenet_v2_c4.tflite  mobilenet_v2_c5.tflite  mobilenet_v2_w16a32_recipe.json  mobilenet_v2_w4a16.tflite  mobilenet_v2_w4a16_recipe.json  mobilenet_v2_w4a32.tflite  mobilenet_v2_w4a32_recipe.json  mobilenet_v2_w4a8.tflite  mobilenet_v2_w4a8_recipe.json  mobilenet_v2_w8a8.tflite  mobilenet_v2_w8a8_r100.tflite  mobilenet_v2_w8a8_tensor.tflite  mobilenet_v2_w8a8_v10.tflite  mobilenet_v2_w8a8_v100.tflite  mobilenet_v2_w8a8_v500.tflite
notebooks/: Quantization_Report.ipynb
results/: experiment_results.csv
src/: benchmark_adb.py  model.py  run_experiments.py  utils.py
